[workspace]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
license = "Apache-2.0"
authors = ["LingCage <maintainers@lingcage.com>"]

[package]
name = "lingbench"
description = "LingBench, a VMM benchmarking framework (library and CLI)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lib]
path = "src/lib/lib.rs"

[profile.release]
lto = "thin"
