[workspace]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
license = "Apache-2.0"
authors = ["LingCage <maintainers@lingcage.com>"]

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"

[package]
name = "lingbench"
description = "LingBench, a VMM benchmarking framework (library and CLI)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lib]
path = "src/lib/lib.rs"

[[bin]]
name = "lingbench"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
sha2.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[profile.release]
lto = "thin"
